--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
     <body>
 
-        <h1>חג פורים שמח!</h1>
+        <button>תלחצו עליי :)</button>
+
         <div class="container animate__animated">
+            <h1 style="visibility: hidden;">חג פורים שמח!</h1>
         </div>
 
 
