--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
 
         <button>תלחצו עליי :)</button>
+        <h2>hello</h2>
 
         <div class="container animate__animated">
             <h1 style="visibility: hidden;">חג פורים שמח!</h1>
