--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <button>תלחצו עליי :)</button>
 
         <div class="container animate__animated">
-            <h1 style="visibility: hidden;">חג פורים שמח!</h1>
+            <h1 style="visibility: hidden;">חג פורים שמח גרוסמנים יקרים!</h1>
+            <h2 style="visibility: hidden;">אוהבים מאד, האלפרים :)</h2>
         </div>
 
 
